# ChangeLog for dev-ruby/gettext_activerecord
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  07 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  20 Apr 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial version.
