@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gettext_activerecord-2.0.3.gem 54784 RMD160 e981428588a5ff93a1932cb728f32e354ff0153d SHA1 e10d01ff059827beb3b62056682d924f92bfcf59 SHA256 4d6d88ac7f5278693369f1631bfd0aecbe9c8c4c79dd3a04216f6536e7de50f7
+DIST gettext_activerecord-2.0.4.gem 56320 RMD160 2b678645421274f42e932760f966b34e7d489894 SHA1 73d109210edcecf6b2e82a047dcd2dd9d0ab461f SHA256 628893cf87e1acaa621e2f43ed18ef4806d3b6e3e27b7476456943eb9d5486a2
 EBUILD gettext_activerecord-2.0.3.ebuild 515 RMD160 715a5890cfb7756805e0baeceb606f72c8d77cdd SHA1 bbb152044cdc3eedd904f768a0fcb71224405f76 SHA256 b23a7a9804eaae2542622638e22f23470958c6332aea3a46cda3709beb7e6728
-MISC ChangeLog 276 RMD160 adcae01bfbed2795eb4e732299ff10911ae90091 SHA1 e6a6c79d2b147f03389033370bb7a1f64afa8c68 SHA256 175730558011975683552a4a5b7db96ca167eb00dcfc7ebfb30ecc02bd0ff80a
+EBUILD gettext_activerecord-2.0.4.ebuild 515 RMD160 f936b34a64d379a00e1fdf6bc0df435e0730b9e9 SHA1 c774a87af65811929d7f5e485bd54b055afc34e7 SHA256 e404c3a81ee3c1721ec9a5b0430e2b71be1818a9f0f68d318b80cb74644e5264
+MISC ChangeLog 424 RMD160 c88d7c32b3e944a0ba08ddeda67c47e659913f9f SHA1 30f8aca6ad7246526e78b726b1bbf25c6e674df9 SHA256 a94dcafe1505f997122ed6816447d7fd2382a0c8ebd6282538a582ee30cf3932
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoaL3AACgkQqj4ysMWt/vvvXQCgh798mEuuM0oEGMWCEHoCsqz9
+fogAn31W6e8603/dS261BS6PDAn+xTd2
+=sE8K
+-----END PGP SIGNATURE-----
