@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/gettext_activerecord
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
+*gettext_activerecord-2.0.4 (25 May 2009)
+
+  25 May 2009; Hans de Graaff <graaff@gentoo.org>
+  +gettext_activerecord-2.0.4.ebuild:
+  Version bump.
+
   07 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Version bump.
 
